# copilot-openai-proxy

./: .gitignore  Cargo.toml  README.md  test-request.json  test-smart.json  test-stream-smart.json  test-stream.json
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs
src/copilot/: client.rs  cookie.rs  history.rs  image.rs  mod.rs  protocol.rs
src/openai/: adapter.rs  mod.rs  model.rs  stream.rs  types.rs
src/server/: middleware.rs  mod.rs
src/server/handlers/: chat.rs  health.rs  images.rs  mod.rs  models.rs  session.rs
src/session/: manager.rs  state.rs
src/util/: id.rs
