[package]
name = "copilot-openai-proxy"
version = "0.1.0"
edition = "2024"
description = "Proxy that converts GitHub Copilot WebSocket protocol to OpenAI-compatible HTTP API"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "stream", "rustls-tls"], default-features = false }

# WebSocket client
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Base64 (for data URL images)
base64 = "0.22"

# Async streams
tokio-stream = "0.1"
futures = "0.3"

# MIME type detection
mime_guess = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
